--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2322,7 +2322,7 @@
   result: Elixir Way  
   allowalt:
     - Elixir Technique
--   - Art of alchemy
+    - Art of alchemy
   direct: Pill Dao  
   literal: Dān dào  
   badtrans: true  
