Shared DLL and debugging patches

--- a/EnglishPatch/EnglishPatch.csproj
+++ b/EnglishPatch/EnglishPatch.csproj
@@ -17,10 +17,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Contracts\DynamicStringContract.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
@@ -53,7 +49,12 @@
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharedAssembly\SharedAssembly.csproj" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="Build">
     <Exec Command="XCOPY /Y /I &quot;$(TargetDir)$(TargetName)$(TargetExt)&quot; &quot;$(GameDir)&quot;" />
+    <Exec Command="XCOPY /Y /I &quot;$(TargetDir)FanslationStudio.SharedAssembly.dll&quot; &quot;$(GameDir)&quot;" />
   </Target>
 </Project>
