--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1253,6 +1253,11 @@
 - raw: 猴儿酒
   result: Monkey Wine
   badtrans: true
+- raw: 梅香酎  
+  result: Plum-Scented Liquor  
+  badtrans: true  
+  direct: Mei Xiang Zhou  
+  literal: Mei Xiang Zhou  
 # - raw: 杂粮酒
 #   result: Mixed Grains Wine 
 # - raw: 老窖杂粮
