--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -939,6 +939,8 @@
   result: Mind Attack
   context: refers to a strategy or technique aimed at breaking an opponent's willpower, confidence, or mental stability rather than physically harming them.
   badtrans: true
+  allowalt:
+    - heartbreak
 - raw: 轻功
   result: Qinggong
   badtrans: true
