--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1160,7 +1160,7 @@
 # Ranks
 - raw: 一阶  
   result: Tier 1
-  badtrans: true  
+  badtrans: false  
 - raw: 二阶  
   result: Tier 2
   badtrans: true
