--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -139,7 +139,34 @@
   badtrans: true  
   direct: Tian Cai Di Bao  
   literal: Tian Cai Di Bao  
-
-
-
+- raw: "<color=#2EDFA3>扣除</color>"  
+  result: Deduct  
+  badtrans: true  
+  direct: Kou Chu  
+  literal: Kou Chu  
+- raw: 秒  
+  result: Second
+  badtrans: true  
+  direct: Miao  
+  literal: Miao
+- raw: 运功  
+  result: Channeling
+  badtrans: true  
+  direct: Yun Gong  
+  literal: Yun Gong  
+- raw: 万法森罗  
+  result: Ten Thousand Laws  
+  badtrans: true  
+  direct: Wan Fa Sen Luo  
+  literal: Wan Fa Sen Luo  
+- raw: 天阶武学  
+  result: Heavenly Martial Arts  
+  badtrans: true  
+  direct: Tian Jie Wu Xue  
+  literal: Tian Jie Wu Xue 
+- raw: 堪武  
+  result: Martial  
+  badtrans: true  
+  direct: Kan Wu  
+  literal: Kan Wu  
 
