Fix manual translation

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -140,7 +140,7 @@
   direct: Tian Cai Di Bao  
   literal: Tian Cai Di Bao  
 - raw: "<color=#2EDFA3>扣除</color>"  
-  result: Deduct  
+  result: "<color=#2EDFA3>Deduct</color>"
   badtrans: true  
   direct: Kou Chu  
   literal: Kou Chu  
