Full s top cleanse

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -169,3 +169,14 @@
   badtrans: true  
   direct: Kan Wu  
   literal: Kan Wu  
+- raw: 开启中......  
+  result: Opening...  
+  badtrans: true  
+  direct: Opening in progress...  
+  literal: Kaiqi zhong......  
+- raw: 采集中......  
+  result: Collecting...  
+  badtrans: true  
+  direct: Gathering in progress...  
+  literal: Caiji zhong......  
+
