--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -179,4 +179,7 @@
   badtrans: true  
   direct: Gathering in progress...  
   literal: Caiji zhong......  
-
+- raw: 侠窟机关  
+  result: Outlaws' Den Mechanism
+  badtrans: true  
+  literal: Xia Ku 
