--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -183,3 +183,26 @@
   result: Outlaws' Den Mechanism
   badtrans: true  
   literal: Xia Ku 
+- raw: 镖师模板  
+  result: Escort Master Mo Ban 
+  badtrans: true  
+  direct: Escort Master Template  
+  literal: Biao Shi Moban  
+- raw: 镖师王华  
+  result: Escort Master Wang Hua  
+  badtrans: true  
+  direct: Escort Master Wang Hua  
+  literal: Biao Shi Wang Hua 
+- raw: 镖师王刚  
+  result: Escort Master Wang Gang  
+  badtrans: true  
+  direct: Escort Master Wang Gang  
+  literal: Biao Shi Wang Gang  
+- raw: 镖师杨青  
+  result: Escort Master Yang Qing  
+  badtrans: true  
+  direct: Escort Master Yang Qing  
+  literal: Biao Shi Yang Qing  
+
+
+
