--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -193,7 +193,21 @@
   badtrans: true  
   direct: Bamboo Sword Practitioner  
   literal: Zhu Jianke  
-
+- raw: 聚宝堂  
+  result: Treasure Gathering Hall  
+  badtrans: true  
+  direct: Treasure Collecting Hall  
+  literal: Ju Bao Tang  
+- raw: 门派金钱  
+  result: Sect's Wealth  
+  badtrans: true  
+  direct: Sect Money  
+  literal: Menpai Jinqian  
+- raw: 冷却中  
+  result: Cooldown  
+  badtrans: true  
+  direct: In Cooling Process  
+  literal: Lengque Zhong 
 
 # Identity
 - raw: 羽士
