--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -203,6 +203,43 @@
   badtrans: true  
   direct: Escort Master Yang Qing  
   literal: Biao Shi Yang Qing  
-
-
-
+- raw: 惊风苍隐录  
+  result: Chronicle of Surprising Winds and the Azure Concealment  
+  badtrans: true  
+  direct: The Chronicle of Surprising Winds and Azure Hiding  
+  literal: Jingfeng Cangyin Lu  
+- raw: 门派善用兵器  
+  result: Sect's Mastery of Weapons  
+  badtrans: true  
+  direct: Sect Good at Using Weapons  
+  literal: Menpai Shanyong Bingqi  
+- raw: 门派擅长特性  
+  result: Sect's Specialty Traits  
+  badtrans: true  
+  direct: Sect's Strengths and Characteristics  
+  literal: Menpai Shanchang Texing  
+- raw: 不万能风  
+  result: Imperfect Wind  
+  badtrans: true  
+  direct: Not-All-Powerful Wind  
+  literal: Bu Wanneng Feng  
+- raw: 孟启在哪  
+  result: Where is Meng Qi?  
+  badtrans: true  
+  direct: Where is Meng Qi?  
+  literal: Meng Qi Zai Na?  
+- raw: 夜叉藤  
+  result: Demon Vine
+  badtrans: true  
+  direct: Demon Vine  
+  literal: Yasha Teng 
+- raw: 驯化  
+  result: Taming  
+  badtrans: true  
+  direct: Domestication  
+  literal: Xunhua  
+- raw: 下蛊  
+  result: Curse  
+  badtrans: true  
+  direct: To Apply Poison  
+  literal: Xia Gu  
