--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -243,3 +243,8 @@
   badtrans: true  
   direct: To Apply Poison  
   literal: Xia Gu  
+- raw: 的委托  
+  result: Commission of  
+  badtrans: true  
+  direct: The Entrustment of  
+  literal: De Weituo  
